Changelog
=========

0.5 (unreleased)
----------------

- Nothing changed yet.


0.4.1 (2011-09-19)
------------------

- Updated the minified version. [vincent]

0.4 (2011-09-19)
----------------

- added find() and parent() support. [vincent]

- added support for chained calls. [vincent]

- Added support for 'this'. [vincent]


0.3.1 (2011-05-09)
------------------

- removed the 'debug' fonction that was sometimes comflicting with
  other products. [vincent]


0.3 (2011-02-25)
----------------

- you can now specify a callback without specifying a form to
  send. [vincent]

- added tests for the jQuery plugin. [vincent]

- removed the 'eval()' calls in process_call. Also removed
  arg_to_string not needed anymore and disabled 'clean_string' which
  is also not needed anymore. [vincent]

- extracted sub-methods from the jquery plugin to easy testing. All
  are prefixed with pyproxy_ to avoid name conflicts. [vincent]

- added roadmap. [vincent]

- added extra JS/CSS file to show a spinner when a request is
  done. The spinner image was generated using ajaxload.info/ [vincent] 

- finally added tests for the base python code. Tests for the jquery
  plugin and customized Plone.Django object to come. [vincent+maurits]

- IMPORTANT: the 'grammar' attribute has been renamed 'base_grammar'
  attribute. If you created sub-classes of the JQueryProxy object,
  update them. Using the 'grammar' attribute caused a problem as it
  was not initialized in the __init__ method, the value was spread to
  every instances of the JQueryProxy object. [vincent]

- added a 'batch' method on the JueryProxy object to process multiple
  entries. It should be used to replace show_errors and
  hide_errors. [vincent]

- deprecated jq.show_errors and jq.hide_errors as it was based
  on Plone CSS classes. [vincent]

- moved 'clean_string', 'package_contents' and 'custom_endswith' to
  utils. [vincent]

- small bugfix in Plone version to hide the previous portal
  messages. [vincent]
