@@ -4,7 +4,8 @@ Changelog
 0.5 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Fix issue with Diazo wrapping the responses with HTML
+  tags. [vincent]
 
 
 0.4.1 (2011-09-19)
